--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^17.2.4",
     "express": "^4.18.2",
+    "mongoose": "^9.2.0",
     "uuid": "^13.0.0"
   }
 }
